# hackatonrojo

./: .gitignore  AUDITORIA.txt  BACKEND.md  README.md  analytics.py  app.py  engine.py  generar_dev.py  generar_elec.py  historico_consumo.csv  pyproject.toml  requirements.txt  test_all.py  watchdog.py
.kiro/specs/energy-hunter-dashboard/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: development-standards.md
.streamlit/: config.toml
data/: edificios.json  resumen_2026-05-14.csv  snapshot_2026-05-14.csv
energy_hunter/: __init__.py  app.py
energy_hunter/clients/: __init__.py
energy_hunter/core/: __init__.py  models.py
energy_hunter/data/: __init__.py  historical.csv
energy_hunter/mock_api/: __init__.py
energy_hunter/ui/: __init__.py
presentations/: Smart Energy Control.pptx  energy_hunter_pitch - copia.pptx  energy_hunter_pitch.pptx
scripts/: generate_deck.py
tests/: __init__.py  conftest.py  test_core_models.py  test_scaffold.py
